@@ -54,10 +54,10 @@ using namespace scheme;
 #define FFI_SUPPORTED 1
 #endif
 
-static double callStubDouble(uintptr_t func, intptr_t* frame, int argc)
+static double callStubDouble(uintptr_t func, CStack* cstack)
 {
 #ifdef ARCH_IA32
-    const int bytes = (argc * sizeof(intptr_t) + 15) & ~15;
+    const int bytes = (cstack->count() * sizeof(intptr_t) + 15) & ~15;
     double ret;
     asm volatile(
         "movl    %%esp, %%edx ;"
@@ -69,19 +69,81 @@ static double callStubDouble(uintptr_t func, intptr_t* frame, int argc)
         "call    *%%eax       ;"
         "movl    %%edi, %%esp ;"
         : "=t" (ret) // t: st[0]
-        : "c" (bytes), "S" (frame), "a" (func) // c:ecx, S:esi a:eax
+        : "c" (bytes), "S" (cstack->frame()), "a" (func) // c:ecx, S:esi a:eax
         : "edi", "edx", "memory"); // we have memory destructions.
     return ret;
+#elif defined ARCH_X86_64
+    double ret;
+    if (cstack->count() == 0) {
+        asm volatile("movq %%rsi, %%r10;"
+                     "movsd   (%%rdi), %%xmm0 ;"
+                     "movsd  8(%%rdi), %%xmm1 ;"
+                     "movsd 16(%%rdi), %%xmm2 ;"
+                     "movsd 24(%%rdi), %%xmm3 ;"
+                     "movsd 32(%%rdi), %%xmm4 ;"
+                     "movsd 40(%%rdi), %%xmm5 ;"
+                     "movsd 48(%%rdi), %%xmm6 ;"
+                     "movsd 56(%%rdi), %%xmm7 ;"
+                     "movq 0(%%r10), %%rdi ;"   // register argument 1
+                     "movq 8(%%r10), %%rsi ;"   // register argument 2
+                     "movq 16(%%r10), %%rdx ;"  // register argument 3
+                     "movq 24(%%r10), %%rcx ;"  // register argument 4
+                     "movq 32(%%r10), %%r8 ;"   // register argument 5
+                     "movq 40(%%r10), %%r9 ;"   // register argument 6
+                     "call *%%rax ;"
+                     "movq %%xmm0, %%rax ;"
+                     : "=a" (ret)
+                     : "0" (func), "S" (cstack->reg()), "D"(cstack->xmm())
+                     : "memory"
+            );
+    } else {
+        const int bytes = (cstack->count()) * 8;
+        asm volatile(
+            "movq %%rsi, %%r10;" // r10 for pointing register frame
+            "movq %%rdx, %%r11;" // r11 for pointer to stack argument in frame
+            "movq %%r11, %%r12;"
+            "addq %%rcx, %%r12;"  // r12 end of stack argument in frame
+            "movsd   (%%rdi), %%xmm0 ;"
+            "movsd  8(%%rdi), %%xmm1 ;"
+            "movsd 16(%%rdi), %%xmm2 ;"
+            "movsd 24(%%rdi), %%xmm3 ;"
+            "movsd 32(%%rdi), %%xmm4 ;"
+            "movsd 40(%%rdi), %%xmm5 ;"
+            "movsd 48(%%rdi), %%xmm6 ;"
+            "movsd 56(%%rdi), %%xmm7 ;"
+            "movq 0(%%r10), %%rdi ;"   // register argument 1
+            "movq 8(%%r10), %%rsi ;"   // register argument 2
+            "movq 16(%%r10), %%rdx ;"  // register argument 3
+            "movq 24(%%r10), %%rcx ;"  // register argument 4
+            "movq 32(%%r10), %%r8 ;"   // register argument 5
+            "movq 40(%%r10), %%r9 ;"   // register argument 6
+            "movq %%rsp, %%r13;"
+            "1:   ;"
+            "cmpq %%r11, %%r12;"
+            "je 2f;"
+            "movq 0(%%r11), %%r14;"
+            "movq %%r14, 0(%%r13);"
+            "addq $8, %%r11;"
+            "addq $8, %%r13;"
+            "jmp 1b;"
+            "2:   ;"
+            "call *%%rax ;"
+            "movq %%xmm0, %%rax ;"
+            : "=a" (ret)
+            : "c" (bytes), "0" (func), "S" (cstack->reg()), "D" (cstack->xmm()), "d" (cstack->frame())
+            : "memory"
+            );
+    }
+    return ret;
 #else
-    MOSH_FATAL("");
     return 0.0;
 #endif
 }
 
-static intptr_t callStub(uintptr_t func, intptr_t* frame, int argc)
+static intptr_t callStub(uintptr_t func, CStack* cstack)
 {
 #ifdef ARCH_IA32
-    const int bytes = (argc * sizeof(intptr_t) + 15) & ~15;
+    const int bytes = (cstack->count() * sizeof(intptr_t) + 15) & ~15;
     intptr_t ret;
     asm volatile(
         "movl    %%esp, %%edx ;"
@@ -93,14 +155,21 @@ static intptr_t callStub(uintptr_t func, intptr_t* frame, int argc)
         "call    *%%eax       ;"
         "movl    %%edi, %%esp ;"
         : "=a" (ret)
-        : "c" (bytes), "S" (frame), "0" (func) // c:ecx, S:esi 0:match to the 0th output
+        : "c" (bytes), "S" (cstack->frame()), "0" (func) // c:ecx, S:esi 0:match to the 0th output
         : "edi", "edx", "memory"); // we have memory destructions.
     return ret;
 #elif defined ARCH_X86_64
     intptr_t ret = 0;
-    const int MAX_REG = 6;
-    if (argc <= MAX_REG) {
+    if (cstack->count() == 0) {
         asm volatile("movq %%rsi, %%r10;"
+                     "movsd   (%%rdi), %%xmm0 ;"
+                     "movsd  8(%%rdi), %%xmm1 ;"
+                     "movsd 16(%%rdi), %%xmm2 ;"
+                     "movsd 24(%%rdi), %%xmm3 ;"
+                     "movsd 32(%%rdi), %%xmm4 ;"
+                     "movsd 40(%%rdi), %%xmm5 ;"
+                     "movsd 48(%%rdi), %%xmm6 ;"
+                     "movsd 56(%%rdi), %%xmm7 ;"
                      "movq 0(%%r10), %%rdi ;"   // register argument 1
                      "movq 8(%%r10), %%rsi ;"   // register argument 2
                      "movq 16(%%r10), %%rdx ;"  // register argument 3
@@ -109,18 +178,24 @@ static intptr_t callStub(uintptr_t func, intptr_t* frame, int argc)
                      "movq 40(%%r10), %%r9 ;"   // register argument 6
                      "call *%%rax ;"
                      : "=a" (ret)
-                     : "0" (func), "S" (frame)
-                       // , "r10" (frame)
+                     : "0" (func), "S" (cstack->reg()), "D"(cstack->xmm())
                      : "memory"
             );
     } else {
-        const int bytes = (argc - 6) * 8;
+        const int bytes = (cstack->count()) * 8;
         asm volatile(
-            "movq %%rsi, %%r10;" // r10 for pointing frame top
-            "movq %%r10, %%r11;" // r11 for pointer to stack argument in frame
-            "addq $48 , %%r11;"
+            "movq %%rsi, %%r10;" // r10 for pointing register frame
+            "movq %%rdx, %%r11;" // r11 for pointer to stack argument in frame
             "movq %%r11, %%r12;"
             "addq %%rcx, %%r12;"  // r12 end of stack argument in frame
+            "movsd   (%%rdi), %%xmm0 ;"
+            "movsd  8(%%rdi), %%xmm1 ;"
+            "movsd 16(%%rdi), %%xmm2 ;"
+            "movsd 24(%%rdi), %%xmm3 ;"
+            "movsd 32(%%rdi), %%xmm4 ;"
+            "movsd 40(%%rdi), %%xmm5 ;"
+            "movsd 48(%%rdi), %%xmm6 ;"
+            "movsd 56(%%rdi), %%xmm7 ;"
             "movq 0(%%r10), %%rdi ;"   // register argument 1
             "movq 8(%%r10), %%rsi ;"   // register argument 2
             "movq 16(%%r10), %%rdx ;"  // register argument 3
@@ -139,7 +214,7 @@ static intptr_t callStub(uintptr_t func, intptr_t* frame, int argc)
             "2:   ;"
             "call *%%rax ;"
             : "=a" (ret)
-            : "c" (bytes), "0" (func), "S" (frame)
+            : "c" (bytes), "0" (func), "S" (cstack->reg()), "D" (cstack->xmm()), "d" (cstack->frame())
             : "memory"
             );
     }
@@ -182,7 +257,7 @@ Object scheme::internalFfiCallTodoubleEx(VM* theVM, int argc, const Object* argv
         }
     }
 
-    const double ret = callStubDouble(func, cstack.frame(), cstack.count());
+    const double ret = callStubDouble(func, &cstack);
     return Object::makeFlonum(ret);
 }
 
@@ -206,7 +281,7 @@ Object scheme::internalFfiCallTovoidMulEx(VM* theVM, int argc, const Object* arg
         }
     }
 
-    const uintptr_t ret = callStub(func, cstack.frame(), cstack.count());
+    const uintptr_t ret = callStub(func, &cstack);
     return Bignum::makeIntegerFromUintprt_t(ret);
 }
 
@@ -229,7 +304,7 @@ Object scheme::internalFfiCallTovoidEx(VM* theVM, int argc, const Object* argv)
         }
     }
 
-    callStub(func, cstack.frame(), cstack.count());
+    callStub(func, &cstack);
     return Object::Undef;
 }
 
@@ -253,7 +328,7 @@ Object scheme::internalFfiCallTointEx(VM* theVM, int argc, const Object* argv)
         }
     }
 
-    const intptr_t ret = callStub(func, cstack.frame(), cstack.count());
+    const intptr_t ret = callStub(func, &cstack);
     return Bignum::makeIntegerFromIntprt_t(ret);
 }
 Object scheme::internalFfiLookupEx(VM* theVM, int argc, const Object* argv)
@@ -320,7 +395,7 @@ Object scheme::internalFfiCallTostringOrZeroEx(VM* theVM, int argc, const Object
         }
     }
 
-    const uintptr_t ret = callStub(func, cstack.frame(), cstack.count());
+    const uintptr_t ret = callStub(func, &cstack);
     if (ret == 0) {
         return Object::makeFixnum(0);
     } else {
