@@ -124,6 +124,19 @@ TEST_F(VMErrorPortTest, loadAndlookupScheme) {
     ASSERT_TRUE(notFound.isFalse());
 }
 
+
+#ifdef ARCH_IA32
+
+TEST_F(FFITest, CStackWithFlonum) {
+    CStack cstack;
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(3.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(2.0)));
+    double* p = (double*)cstack.frame();
+    EXPECT_EQ(4, cstack.count());
+    EXPECT_DOUBLE_EQ(3.0, p[0]);
+    EXPECT_DOUBLE_EQ(2.0, p[1]);
+}
+
 TEST_F(FFITest, CStackWithFixnum) {
     CStack cstack;
     EXPECT_TRUE(cstack.push(Object::makeFixnum(3)));
@@ -165,17 +178,6 @@ TEST_F(FFITest, CStackWithByteVector) {
     EXPECT_STREQ("hige", (char*)p[1]);
 }
 
-
-TEST_F(FFITest, CStackUnsupportedArgument) {
-    // we assume this
-    ASSERT_TRUE(sizeof(uint64_t) >= sizeof(intptr_t));
-    CStack cstack;
-    const bool result = cstack.push(Object::makeEqHashTable());
-    EXPECT_FALSE(result);
-    ucs4string err = cstack.getLastError();
-    EXPECT_STREQ("unsupported ffi argument", err.ascii_c_str());
-}
-
 TEST_F(FFITest, CStackTooManyArgument) {
     // we assume this
     ASSERT_TRUE(sizeof(uint64_t) >= sizeof(intptr_t));
@@ -190,15 +192,94 @@ TEST_F(FFITest, CStackTooManyArgument) {
     EXPECT_STREQ("too many ffi arguments", err.ascii_c_str());
 }
 
-TEST_F(FFITest, CStackWithFlonum) {
+#elif ARCH_X86_64
+TEST_F(FFITest, CStackWithFixnum) {
     CStack cstack;
-    EXPECT_TRUE(cstack.push(Object::makeFlonum(3.0)));
-    EXPECT_TRUE(cstack.push(Object::makeFlonum(2.0)));
-    double* p = (double*)cstack.frame();
-    EXPECT_EQ(4, cstack.count());
-    EXPECT_DOUBLE_EQ(3.0, p[0]);
-    EXPECT_DOUBLE_EQ(2.0, p[1]);
+    EXPECT_TRUE(cstack.push(Object::makeFixnum(3)));
+    EXPECT_TRUE(cstack.push(Object::makeFixnum(4)));
+    EXPECT_TRUE(cstack.push(Object::makeFixnum(-5)));
+    EXPECT_TRUE(cstack.push(Bignum::makeIntegerFromU32(0xffffffff)));
+    intptr_t* p = cstack.reg();
+    EXPECT_EQ(4, cstack.regCount());
+    EXPECT_EQ(3, p[0]);
+    EXPECT_EQ(4, p[1]);
+    EXPECT_EQ(-5, p[2]);
+    const uint32_t x = 0xffffffff;
+    const uint32_t y = p[3];
+    EXPECT_EQ(x, y);
 }
 
+TEST_F(FFITest, CStackWithString) {
+    CStack cstack;
+    cstack.push(Object::makeFixnum(3));
+    cstack.push("hige");
+    intptr_t* p = cstack.reg();
+    EXPECT_EQ(2, cstack.regCount());
+    EXPECT_EQ(3, p[0]);
+    EXPECT_STREQ("hige", (char*)p[1]);
+}
+
+TEST_F(FFITest, CStackWithByteVector) {
+    CStack cstack;
+    Object b = Object::makeByteVector(2);
+    ByteVector* const bv = b.toByteVector();
+    bv->u8Set(0, 1);
+    bv->u8Set(1, 2);
+    cstack.push(b);
+    cstack.push("hige");
+    intptr_t* p = cstack.reg();
+    EXPECT_EQ(2, cstack.regCount());
+    EXPECT_EQ(1, ((uint8_t*)(p[0]))[0]);
+    EXPECT_EQ(2, ((uint8_t*)(p[0]))[1]);
+    EXPECT_STREQ("hige", (char*)p[1]);
+}
+
+TEST_F(FFITest, CStackTooManyArgument) {
+    // we assume this
+    ASSERT_TRUE(sizeof(uint64_t) >= sizeof(intptr_t));
+
+    CStack cstack;
+    for (int i = 0; i < CStack::MAX_ARGC + CStack::MAX_REG; i++) {
+        EXPECT_TRUE(cstack.push(Object::makeFixnum(3)));
+    }
+    const bool result = cstack.push(Object::makeFixnum(3));
+    EXPECT_FALSE(result);
+    ucs4string err = cstack.getLastError();
+    EXPECT_STREQ("too many ffi arguments", err.ascii_c_str());
+}
+
+TEST_F(FFITest, CStackWithFlonum) {
+    CStack cstack;
+    // use sse registers
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(1.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(2.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(3.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(4.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(5.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(6.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(7.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(8.0)));
+
+    // use stack
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(9.0)));
+    EXPECT_TRUE(cstack.push(Object::makeFlonum(10.0)));
+
+    EXPECT_EQ(2, cstack.count());
+    double* p = (double*)cstack.frame();
+    EXPECT_DOUBLE_EQ(9.0, p[0]);
+    EXPECT_DOUBLE_EQ(10.0, p[1]);
+}
+
+#endif
+
+TEST_F(FFITest, CStackUnsupportedArgument) {
+    // we assume this
+    ASSERT_TRUE(sizeof(uint64_t) >= sizeof(intptr_t));
+    CStack cstack;
+    const bool result = cstack.push(Object::makeEqHashTable());
+    EXPECT_FALSE(result);
+    ucs4string err = cstack.getLastError();
+    EXPECT_STREQ("unsupported ffi argument", err.ascii_c_str());
+}
 
 #endif
